Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Critical
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 10.8.1
-
Component/s: Character Sets, Platform Windows, Upgrades
-
Labels:None
Description
Steps:
1. Install an earlier version of the application (e.g. 10.7.1) in the non-ASCII parh (e.g. "C:\Program Files\Märiä")
2. Update to the 10.8 version (from preview-10.8-MDEV-26713-windows-i18-support branch)
Expected result
Update was successful, service is started.
Actual resul
Servic doesn't started:
Warning: C:\Program Files\Märiä\bin\mysql.exe: invalid (non-UTF8) characters found for option 'plugin_dir' in file 'C:\Program Files\Märiä\data\my.ini'
|
ERROR 2002 (HY000): Can't connect to server on 'localhost' (10061)
|
Attachments
Issue Links
- is caused by
-
MDEV-26713 Windows - improve i18n support
-
- Closed
-